---
source: crates/monochange/tests/cli_output.rs
info:
  program: mc
  args:
    - validate
  env:
    NO_COLOR: "1"
    RUST_LOG: ""
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: package `core` belongs to multiple groups: `cli` and `sdk`
  --> monochange.toml:11:13

   |
11 | packages = ["core"]
   |             ^^^^^^ first group membership

  ::: monochange.toml:8:13
  |
8 | packages = ["core"]
  |             ^^^^^^ conflicting group membership

  = help: move the package into exactly one [group.<id>] declaration
  = note: the first snippet marks the primary failure location
  = note: additional snippets show related locations referenced by this error
